--- a/.github/workflows/show-directory.yml
+++ b/.github/workflows/show-directory.yml
@@ -4,8 +4,26 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v4
-      - run: make setup
-      - run: make test
-      - run: make lint
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: make install
+
+      - name: Build project
+        run: make build
+
+      - name: Run tests
+        run: make test
+
+      - name: Run linter
+        run: make lint
+
+      - name: Hello from Hexlet
+        uses: hexlet-components/hello-from-hexlet-action@release
